--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>El Blog de Marcos</title>
 </head>
 <body>
-  hola mi nombre es Marcos
+  <h1>
+    Curso escencial de HTML y CSS
+  </h1>
+  <P>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos,
+  en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
+</P>
+<img src="images/google-chrome.png" alt="logo google chrome" title="logo de google chronme">
+<img src="images/visual-studio-code.png" alt="logo visual studio" title="logo de visual studio code">
+<img src="images/figma.png" alt="logo de figma" title="logo de figma">
+<img src="images/github.png" alt="logo de github" title="logo de github">
 </body>
 </html>
