--- a/index.html
+++ b/index.html
@@ -1,21 +1,242 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./CSS/styles-physical.css.css">
   <title>El Blog de Marcos</title>
 </head>
 <body>
-  <h1>
-    Curso escencial de HTML y CSS
-  </h1>
-  <P>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos,
-  en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
-</P>
-<img src="images/google-chrome.png" alt="logo google chrome" title="logo de google chronme">
-<img src="images/visual-studio-code.png" alt="logo visual studio" title="logo de visual studio code">
-<img src="images/figma.png" alt="logo de figma" title="logo de figma">
-<img src="images/github.png" alt="logo de github" title="logo de github">
-</body>
+  <div class="hero"></div>
+<div class="header">
+  <div class="wrapper">
+    <div class="header-content">
+      <header>
+        <nav>
+          <details open>
+            <summary>
+              Setup
+            </summary>
+            <ol>
+              <li><a href="#google-chrome">
+                  Google Chrome
+                </a>
+              </li>
+              <li><a href="#vsc">
+                  Visual Studio code
+                </a>
+              </li>
+              <li><a href="#figma">
+                  Figma
+                </a>
+              </li>
+              <li><a href="#github">
+                  GitHub
+                </a>
+              </li>
+            </ol>
+          </details>
+          <details open>
+            <summary>
+              Conceptos escenciales del Desarrollo Web
+            </summary>
+            <ol>
+              <li><a href="#html">
+                  Que es HTML?
+                </a>
+              </li>
+              <li><a href="#etiquetas">
+                  Etiquetas
+                </a>
+              </li>
+              <li>
+                <a href="#DOM">
+                  DOM
+                </a>
+              </li>
+              <li><a href="#semantica">
+                  Semántica
+                </a>
+              </li>
+              <li><a href="#atributos">
+                  Atributos
+                </a>
+              </li>
+              <li><a href="#css">
+                  Que es CSS?
+                </a>
+              </li>
+            </ol>
+          </details>
+        </nav>
+      </header>
+    </div>
+  </div>
+</div>
+  <main class="main">
+    <div class="wrapper">
+      <div class="main-content">
+        <h1>
+          Curso escencial de HTML y CSS
+      </h1>
+        <P>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos,
+        en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
+      </P>
+      <hr>
+      <section class="section-content">
+        <h2>
+          Setup
+        </h2>
+          <img src="./images/google-chrome.png" alt="logo google chrome" title="logo de google chronme">
+            <h3 id="google-chrome">Google Chrome</h3>
+              <p>
+                Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de
+                desarrollo avanzadas y de amigable uso.
+                </p>
+          <img src="./images/visual-studio-code.png" alt="logo visual studio" title="logo de visual studio code">
+            <h3 id="vsc">visual studio code</h3>
+              <p>
+                Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de
+                extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
+                el que se desemvuelva.
+              </p>
+          <img src="./images/figma.png" alt="logo de figma" title="logo de figma">
+            <h3 id="figma">figma</h3>
+              <p>
+                Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su implementación por su fácil uso porque puede ser usado directamente desde el navegador.
+              </p>
+          <img src="./images/github.png" alt="logo de github" title="logo de github">
+            <h3 id="github">GitHub</h3>
+              <p>
+                Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.
+              </p>
+              <blockquote>
+                <p>
+                  “Este es el inicio de tu carrera como Desarrollador Web”
+                </p>
+                <p>
+                  <span>
+                    Leonidas Esteban
+                  </span>
+                </p>
+              </blockquote>
+      </section>
+      <hr>
+      <section class="section-content">
+        <h2>Conceptos esenciales del Desarrollo Web</h2>
+          <h3 id="html">Que es HTML</h3>
+            <p>
+              Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado y la estructura del contenido.
+            <code>const name = 'your name'</code></p>
+            <pre>
+      &lt;!DOCTYPE html&gt;
+      &lt;html lang=&quot;en&quot;&gt;
+      &lt;head&gt;
+      &lt;meta charset=&quot;UTF-8&quot;&gt;
+      &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
+      &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+      &lt;title&gt;Document&lt;/title&gt;
+      &lt;/head&gt;
+      &lt;body&gt;
+
+      &lt;/body&gt;
+      &lt;/html&gt;
+            </pre>
+          <h3 id="etiquetas">Etiquetas</h3>
+            <p>
+              Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene características y usos diferentes aunque visualmente den un resultado similar.
+            </p>
+            <p>
+             Muchas etiquetas son fácil de diferencias como los headings o las imágenes y otras diferentes como header, footer,
+             section o div, aquí es donde la semántica será la respuesta y si sabemos un poco de inglés también podremos darnos una
+             pequeña idea de su uso pero en este curso vamos a usar las más importantes y que serán parte de tu día a día como
+             Software Developer.
+            </p>
+          <h3 id="DOM">DOM</h3>
+            <p>
+              El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar dependencias, herencias en css y que tan complejo es nuestro proyecto.
+            </p>
+        <img src="./images/dom.png" alt="Estructura de arbol que representa al DOM" title="Estructura de Arbol del DOM">
+          <h3 id="semantica">Semántica</h3>
+            <p>
+              La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y
+              no deben significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más
+              relevantes que otras, esto ayudará a los motores de búsqueda como Google o Duck Duck Go a diferenciar tu contenido,
+              categorizar y será la herramientas más valiosa para estar en los primeros resultados de búsqueda SEO. También ayudará a
+              la accesibilidad de tu sitio web, para que personas con habilidades diferentes puedan entender cada contenido.
+            </p>
+          <h3 id="atributos">Atributos</h3>
+            <p>
+              Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el
+              navegador, algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos
+              funcionan en solo alguna etiquetas como src
+            </p>
+            <h3 id="css">CSS</h3>
+            <P>
+              Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir
+              la presentación de documentos HTML
+            </P>
+            <img src="./images/css-definicion.png" alt="css imagen de definicion" title="css logo">
+              </section>
+            <hr>
+            <section class="section-content">
+              <h2>Modelo de caja</h2>
+              <h3>El modelo de caja esta compuesto por:</h3>
+              <p>
+                Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.
+              </p>
+              <ol>
+                <li>
+                  Tamaño del contenido / ancho y alto
+                </li>
+                <li>
+                  Padding / Relleno
+                </li>
+                <li>
+                  Border / Bordes
+                </li>
+                <li>
+                  Margin / Márgenes
+                </li>
+              </ol>
+              <h3>Propiedades Fisicas para el modelo de caja: </h3>
+                <ul>
+                  <Li>
+                    width / height
+                  </Li>
+                  <li>
+                    margin / margin-top | margin-right | margin-bottom | margin-left
+                  </li>
+                  <li>
+                    border / border-top | border-right | border-bottom | border-left
+                  </li>
+                  <li>
+                    padding / padding-top | padding-right | padding-bottom | padding-left
+                  </li>
+                </ul>
+              <h3>Propiedades lógicas para el modelo de caja:</h3>
+                <ul>
+                  <li>
+                    inline-size / block-size
+                  </li>
+                  <li>
+                    margin-block | margin-inline | margin-block-start | margin-block-end | margin-inline-start | margin-inline-end
+                  </li>
+                  <li>
+                    border-block | border-inline | border-block-start | border-block-end | border-inline-start | border-inline-end
+                  </li>
+                  <li>
+                    padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start | padding-inline-end
+                  </li>
+                </ul>
+        </section>
+              <a href="https://youtube.com" target="_blank">la solucion a todo</a>
+              <p>si tienes alguna duda escribeme a
+                <a href="mailto:marcos.g.66u@gmail.com">marcos.g.66u@gmail.com</a>
+              </p>
+      </div>
+    </div>
+    </main>
+  </body>
 </html>
